objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <label>Consignee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>57</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Copy_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Location__c</fullName>
        <label>End Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aankoper_Buyer__c</fullName>
        <label>Aankoper / Buyer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>UnPack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Location__c</fullName>
        <label>Start Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Description__c</fullName>
        <label>Pack Description</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eurofactor_prsence__c</fullName>
        <label>Eurofactor prsence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Update_Count__c</fullName>
        <label>Field Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Others_Description__c</fullName>
        <label>Others Description</label>
        <length>66</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10_7_23_DAta_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>10.7.23 DAta Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Confirmation_N__c</fullName>
        <label>Purchase Confirmation N°</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_have_should_have_on_eurofactor__c</fullName>
        <label>Name have/ should have on eurofactor</label>
        <type>TextArea</type>
    </fields>
    <validationRules>
        <fullName>Purchase_conformation_Read_only</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
NOT(ISBLANK( PRIORVALUE( Purchase_Confirmation_N__c ) )), ISCHANGED(Purchase_Confirmation_N__c))</errorConditionFormula>
        <errorMessage>You can not edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_PackageType_is_Others_it_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Package_Type__c , &apos;Others&apos;) , ISBLANK( Others_Description__c ) )</errorConditionFormula>
        <errorDisplayField>Others_Description__c</errorDisplayField>
        <errorMessage>You Selected Others Option. Please Enter the Others Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Rule_for_Margin1to_50_Range</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 Margin__c  &gt; 0.5,
Margin__c  &lt; 0.00
)</errorConditionFormula>
        <errorMessage>Margin Should be 1 to 50 Range</errorMessage>
    </validationRules>
</CustomObject>